add missed saturation